2021-05-22  Jacob Bachmeyer  <jcb@gnu.org>

	* dejagnu: Fix error message.

	* config.guess: Import patched version; patches sent upstream.

2021-05-20  Jacob Bachmeyer  <jcb@gnu.org>

	* dejagnu: Search for a POSIX Awk and validate that at least a
	simple Awk program actually works.
	* testsuite/launcher.all/command.exp: Add tests for error produced
	when no Awk is found and a help message is requested.

	* lib/dejagnu.exp: Avoid reporting next test as UNRESOLVED when
	reporting error due to missing size(1) while loading file.

	* testsuite/lib/runtest.exp (runtest_copy_nested_testsuite_log):
	New procedure.  Dumps log from nested run into main test log.

	* testsuite/runtest.libs/utils.test: Change test for [which make]
	to [which sh] because make(1) is not always available on non-GNU
	systems but sh(1) exists on any Unix.  GNU make is often installed
	as "gmake" on non-GNU systems and may be the only "make" utility.

	* testsuite/runtest.main/pr42399.exp (test_pr42399): Revise to
	ensure that a failure to produce any output at all in the inner
	test will be detected.  This was discovered on Solaris 10.

	* testsuite/runtest.main/stats.exp: Copy stat.log from nested
	testsuite run to the main test log upon test failure.

	* testsuite/runtest.main/nested/testsuite/stat.test/unit-sub.exp:
	Explicitly pass /dev/null to unit-sub.awk because /usr/bin/awk on
	Solaris 10 does not seem to recognize assignment to ARGV.
	* testsuite/runtest.main/nested/testsuite/bug.test/pr42399-sub.exp:
	Likewise.

2021-05-18  Jacob Bachmeyer  <jcb@gnu.org>

	* dejagnu: Redirect input from /dev/null when testing if awk is
	GNU Awk; this avoids a hang on Solaris 10 where awk treats
	--version as an Awk program and attempts to read input.
	(command): Rework the initial setting of this variable to avoid
	limitations in Solaris 10 awk.

	* testsuite/report-card.all/onetest.exp: Avoid Tcl error when item
	and totals lines are missing entirely.
