@@ -21,20 +21,16 @@
 # each element: { name args envars exit_code output_re... }
 set tests {
     { "dejagnu help selects dejagnu(1) manpage"
-	{help -v} {MANPAGER=echo PAGER=echo} 0
+	{help --DGTest -v} {} 0
 	"Forwarding to man \".*doc/dejagnu\\.1\"" }
     { "dejagnu help help selects dejagnu-help(1) manpage"
-	{help -v help} {MANPAGER=echo PAGER=echo} 0
+	{help --DGTest -v help} {} 0
 	"Forwarding to man \".*doc/dejagnu-help\\.1\"" }
 }
 
 if { ![file isdirectory [file join [file dirname $LAUNCHER] commands]] } {
     skip_dejagnu_launcher_tests \
 	"The 'commands' directory is not present in the source tree." \
-	unsupported $tests
-} elseif { [istarget *-*-solaris*] } {
-    skip_dejagnu_launcher_tests \
-	"The 'man' command in Solaris does not work in the source tree." \
 	unsupported $tests
 } else {
     run_dejagnu_launcher_tests $LAUNCHER $tests
